# fox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTE.txt  README.md  TODO.md  bin  bugs.txt  build.sh  cbuild.c  cbuild.h  hello  hello.asm  hello.ll  hello.sh  output  output.asm  test.asm  test.py  test.txt  todo.txt
bootstrap/: fox.asm  main.fox
editor/: fox.el  fox.vim  setup_editor.sh
euler/: problem001.fox  problem002.fox  problem003.asm  problem003.fox  problem006.fox
examples/: arg_len.fox  array.fox  bin  cat.fox  collatz.fox  elf  elf.c  elf2  elf2.c  elf3.c  fib.fox  files.fox  fizz-buzz.fox  fizz-buzz.txt  hello.fox  max.fox  name.fox  test.fox  twosum.fox  variable.fms  variable.fox
include/: compiler.h  context.h  error.h  expressions.h  interpreter.h  lexer.h  llvm_compiler.h  nodes.h  parser.h  type.h
include/lib/: hashtable.h  hex.h  utils.h  vector.h
src/: compiler.c  context.c  error.c  lexer.c  llvm_compiler.c  main.c  parser.c  type.c
src/lib/: hashtable.c  hex.c  utils.c  vector.c
stdlib/: math.fox  output.asm  random.fox  std.fox
tests/: arithmetics.fox  arithmetics.txt  bindings.fox  bindings.txt  condition.fox  constants.fox  constants.txt  functions.fox  functions.txt  intrinsics.fox  intrinsics.txt  loops.fox  memory.fox  memory.txt  operators.fox  strings.fox
